--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,5 +21,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var('--poppins_init'), var('--lato_init'), sans-serif
 }
